# delete-bones-bevy-crash

./: Cargo.toml  index.html
assets/: scifi_character.glb
src/: main.rs
src/bevy_app/: asset_loader_plugin.rs  collect_hierarchy.rs  delete_bones_on_spacebar_keypress.rs  link_animations.rs  mod.rs  run_animations.rs  spawn_character.rs  spawn_scenes.rs
style/: output.css
