[package]
name = "gltf-examiner"
version = "0.1.0"
edition = "2021"

[dependencies]
# bevy
bevy_panorbit_camera = "0.16.0"
bevy_asset_loader ="0.20"
[dependencies.bevy]
version = "0.13.0"
# Disable the default features if there are any that you do not want
default-features = false
features = [
    "animation",
    "bevy_asset",
    "bevy_audio",
    # "bevy_gilrs",
    "bevy_scene",
    "bevy_winit",
    "bevy_core_pipeline",
    "bevy_pbr",
    "bevy_gltf",
    "bevy_render",
    # "bevy_sprite",
    "bevy_text",
    # "bevy_ui",
    # "multi-threaded",
    "png",
    "hdr",
    "vorbis",
    # "x11",
    "bevy_gizmos",
    # "android_shared_stdcxx",
    "tonemapping_luts",
    "default_font",
    "webgl2",
    # "bevy_debug_stepping" ,
    ]

